syntax = "proto3";
option java_multiple_files = true;
option cc_generic_services = true;
option java_generic_services = true;
package com.helpdesk;

import "Common.proto";

message IssueRequester {
  int32 id = 1;
  string fullName = 2;
  string email = 3;
  NullableBoolean isActive = 4;
  NullableInt64 created = 5;
}

message IssueRequesters {
  repeated IssueRequester IssueRequesters = 1;
}