syntax = "proto3";
option java_multiple_files = true;
option cc_generic_services = true;
option java_generic_services = true;
package com.helpdesk;

import "IssueRequest.proto";
import "IssueRequester.proto";
import "IssueResponse.proto";

message PagedData {
  int64 totalElements = 1;
  int32 totalPages = 2;
  int32 numberOfElements = 3;
  oneof kind {
    IssueRequests issueRequests = 4;
    IssueRequesters issueRequesters = 5;
    IssueResponses issueResponses = 6;
  }
}